Update Chart to Allow Multi Series

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
 <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" href="style.css">
 
@@ -38,9 +37,10 @@
             <button id="clear">Clear</button>
         </div>
     </div>
+    <div class="button-container">
+        <!--Built Dynamically-->
+    </div>      
 </body>
-
-
 
 <!--Ending JS-->
 <script src="helper.js"></script>
