Changed Multi Series Line buttons to fit the color of the line

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             <input type="string" id="endTime"></input>
         </div>
         <div>
-            <button id="clear">Clear</button>
+            <button id="clear" class="regular-button">Clear All</button>
         </div>
     </div>
     <div class="button-container">
