Add Google Analytics

--- a/src/index.html
+++ b/src/index.html
@@ -46,3 +46,13 @@
 <script src="helper.js"></script>
 <script src="chart.js"></script>
 <script src="dark.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2GSYT0SC8K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2GSYT0SC8K');
+</script>
