Add Screenshot to clipboard functionality

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
 <link rel="stylesheet" href="style.css">
 
@@ -35,6 +36,7 @@
         </div>
         <div>
             <button id="clear" class="regular-button">Clear All</button>
+            <button id="screenshotBtn" class="regular-button"><i class="fa fa-clipboard" aria-hidden="true"></i></button>
         </div>
     </div>
     <div class="button-container">
