Add Scale Axis for Time in minutes so user can have more data points, added start values for dates, and changed from 3 series to 5

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,11 @@
             <span>Y-Axis Scale Value</span>
             <input type="number" id="yAxisScale"></input>
         </div>
+        <div class="input-with-unit">
+            <label for="xAxisScale">
+                X-Scale in Minutes:
+            <input type="number" id="xAxisScale"></input>
+        </div>
         <div>
             <span>Start Date:</span>
             <input type="string" id="startTime"></input>
